solve sticky hover on mobile

--- a/src/components/button.css
+++ b/src/components/button.css
@@ -9,6 +9,9 @@
   color: #fff;
   font-size: 1rem;
 }
-.button:hover {
-  background-color: #f2131a;
+
+@media (hover: hover) {
+  .button:hover {
+    background-color: #f2131a;
+  }
 }
